[gd_scene load_steps=10 format=3 uid="uid://dnf8hyjqidd4t"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_8tonr"]
[ext_resource type="Texture2D" uid="uid://bkrblri4gdljl" path="res://UI/all-out-attacks-finish-screen-for-all-characters-makes-for-v0-c77nrbg3k2ic1.webp" id="2_8opwc"]
[ext_resource type="Script" path="res://UI/fullscreen.gd" id="2_dxi1q"]
[ext_resource type="FontFile" uid="uid://baqtlu2e54wd2" path="res://UI/Font/Honey Mushroom.ttf" id="3_6fk1t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2wqlw"]
texture = ExtResource("2_8opwc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ooo4x"]
bg_color = Color(0.862745, 0.494118, 0.196078, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chqsr"]
bg_color = Color(0.121569, 0.631373, 0.94902, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl8yu"]
bg_color = Color(0.32549, 0.686275, 0.454902, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v65wi"]
bg_color = Color(0.560784, 0.560784, 0.560784, 0.784314)

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tonr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2wqlw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 419.0
offset_right = 394.0
offset_bottom = 531.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6fk1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_ooo4x")
text = "Play"

[node name="How to play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6fk1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_chqsr")
text = "How to Play"

[node name="Fullscreen" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6fk1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_gl8yu")
text = "Full Screen"
script = ExtResource("2_dxi1q")

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6fk1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_v65wi")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
